# ZK-Voting-System

./: .gitignore  package.json
circuits/: Cargo.toml
circuits/pkg/: circuits.d.ts  circuits_bg.wasm
circuits/src/: lib.rs  main.rs  merkle.rs  merkle_proof.rs  merkle_tree.rs  nullifier.rs  poseidon.rs  setup.rs  vote_circuit.rs
contracts/: package.json
contracts/contracts/: voting.sol
contracts/scripts/: deploy.js
frontend/: package.json
frontend/src/app/: page.js
frontend/src/app/admin/: page.jsx
frontend/src/app/results/: page.jsx
frontend/src/app/vote/: page.jsx
frontend/src/components/: vote.jsx
frontend/src/services/: identity.js  proof.js  results.js  vote.js
frontend/src/zk/: circuits.js  circuits_bg.wasm  circuits_bg.wasm.d.ts
relayer/: package.json
relayer/src/: server.js
scripts/: builtMerkleTree.js  createElection.js  generateVoters.js  nullifier.js
shared/: abi.json  identity.js  merkle.js  tree.json
